Updated copy for HW4 part2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My First Bitstarter</title>
+        <title>Singkolar - Support education and make a difference with as little as 5 pesos.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" 
             href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
@@ -115,7 +115,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="#">Bitstarter</a>
+                    <a class="brand" href="#">Singkolar</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
@@ -136,19 +136,21 @@
             <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
             <div class="row-fluid heading">
                 <div class="span12">
-                    <h1>Product</h1>
+                    <h1>Singkolar Starter Campaign</h1>
                 </div>
             </div>
             <div class="row-fluid subheading">
                 <div class="span12">
                     <!-- Special typography from Bootstrap for lead paragraph. -->
                     <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-                    <p class="lead">One sentence description.</p>
+                    <p class="lead">
+                        Support education and make a difference with as little as 5 pesos
+                    </p>
                 </div>
             </div>
             <div class="row-fluid pitch">
                 <div class="span5 offset1 video">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i.imgur.com/xw8t1qz.png">
                 </div>
 
                 <!-- We define a new 'actions' div to contain statistics, order, and share buttons. -->
@@ -160,17 +162,17 @@
                                 different in horizontal and vertical layouts, illustrating
                                 media queries. -->
                                 <div class="linediv-l">
-                                    <h3>1000</h3> <p>backers</p>
+                                    <h3>0</h3> <p>backers</p>
                                 </div>
                             </div>
                             <div class="span4">
                                 <div class="linediv-c">
-                                    <h3>$6000</h3> <p>of $10,000</p>
+                                    <h3>$0</h3> <p>of $10,000</p>
                                 </div>
                             </div>
                             <div class="span4">
                                 <div class="linediv-r">
-                                    <h3>10</h3> <p>days left</p>
+                                    <h3>30</h3> <p>days left</p>
                                 </div>
                             </div>
                         </div>
@@ -179,14 +181,14 @@
                         <!-- Bootstrap progress bar -->
                         <!-- http://twitter.github.io/bootstrap/components.html#progress -->
                         <div class="thermometer progress active">
-                            <div class="bar bar-success" style="width: 60%;"></div>
-                            <div class="bar bar-warning" style="width: 40%;"></div>
+                            <div class="bar bar-success" style="width: 0%;"></div>
+                            <div class="bar bar-warning" style="width: 100%;"></div>
                         </div>
                     </div>
                     <div class="span6 offset3 order">
                         <!-- Standard Bootstrap button. -->
                         <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-                        <button class="btn btn-success btn-large">Preorder</button>
+                        <button class="btn btn-success btn-large">Support</button>
                     </div>
                     <div class="span8 offset2 social">
                         <!-- Social buttons are not included in default Bootstrap. -->
@@ -203,20 +205,18 @@
             <!-- http://placehold.it -->
             <div class="row-fluid section1">
                 <div class="span5 offset1 asset">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i.imgur.com/pS8chCD.jpg" title="source: http://homeworks-edsci.blogspot.com" />
                 </div>
                 <div class="span5 copy">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget
-                        semper risus. In ac lorem congue, commodo libero mattis, vulputate
-                        purus. In aliquam eleifend nisi, eu pulvinar sapien vehicula nec.
-                        Curabitur luctus justo et tellus aliquam, eget vulputate leo sagittis.
-                        Sed eget consequat eros. In ornare sem at magna hendrerit, vel
-                        aliquam nisl sodales. Integer fringilla vestibulum semper. Integer eu
-                        vestibulum dui, non eleifend arcu. Sed bibendum gravida sem, at ultrices
-                        augue imperdiet bibendum. Nam ornare at metus id vulputate. Integer
-                        vestibulum dui, non eleifend arcu. Sed bibendum gravida sem, at ultrices
-                        augue imperdiet bibendum. Nam ornare at metus id vulputate.
+                        Education is a basic human right that helps an idividual's physical, 
+                        intellectual, and moral development with the goal of freeing themselves 
+                        from the limiting implications of poverty, ignorance and other socioeconomic 
+                        circumstances.
+                    </p>
+                    <p>
+                        It also drives an individual to develop a sense of Patriotism and 
+                        Nationalism which are qualities that help shape our nation's future leaders.
                     </p>
                 </div>
             </div>
@@ -224,20 +224,29 @@
             <div class="row-fluid section2">
                 <div class="span5 offset1 copy copy-right">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget
-                        semper risus. In ac lorem congue, commodo libero mattis, vulputate
-                        purus. In aliquam eleifend nisi, eu pulvinar sapien vehicula nec.
-                        Curabitur luctus justo et tellus aliquam, eget vulputate leo sagittis.
-                        Sed eget consequat eros. In ornare sem at magna hendrerit, vel
-                        aliquam nisl sodales. Integer fringilla vestibulum semper. Integer eu
-                        vestibulum dui, non eleifend arcu. Sed bibendum gravida sem, at ultrices
-                        augue imperdiet bibendum. Nam ornare at metus id vulputate. Integer
-                        vestibulum dui, non eleifend arcu. Sed bibendum gravida sem, at ultrices
-                        augue imperdiet bibendum. Nam ornare at metus id vulputate.
+                        Our government provides free basic education and even subsidizes college 
+                        education. But even free or subsidized education is unsustainable for most 
+                        Filipino. 
+                    </p>
+                    <p>
+                        Statistics show that out of 10 students who enter grade 1: 7 will finish 
+                        elementary, 3 will finish highschool, and only 1 will finish college. 
+                    </p>
+                    <p>
+                        A major reason is <em>poverty</em>.
+                    </p>
+                    <p>
+                        In hindsight, most parents have their hands full in providing their 
+                        children with food, clothing, and shelter than worry about school expenses.
+                    </p>
+                    <p>
+                        <strong>Singkolar</strong> aims to address that problem by imploring on everyone's 
+                        inherent generosity and provide funding to help these kids reach their full 
+                        potential.
                     </p>
                 </div>
                 <div class="span5 asset">
-                    <img class="img-polaroid" src="http://placehold.it/480x300">
+                    <img class="img-polaroid" src="http://i.imgur.com/8s3Pfi1.jpg" title="source: http://newshopper.sulekha.com/philippines-poverty_photo_947287.htm" />
                 </div>
             </div>
 
@@ -252,12 +261,14 @@
                             <div class="accordion-heading">
                                 <a class="accordion-toggle" data-toggle="collapse"
                                     data-parent="#accordion2" href="#collapseOne">
-                                    What does FAQ stand for?
+                                    What is Singkolar?
                                 </a>
                             </div>
                             <div id="collapseOne" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    Frequently Asked Question.
+                                    Singkolar is a crowdfunding platform where everyone can make a difference 
+                                    in the lives of our youth and ensure their education with as little as 
+                                    5 pesos.
                                 </div>
                             </div>
                         </div>
@@ -265,12 +276,29 @@
                             <div class="accordion-heading">
                                 <a class="accordion-toggle" data-toggle="collapse"
                                     data-parent="#accordion2" href="#collapseTwo">
-                                    What's a Frequently Asked Question?
+                                    Why build this?
                                 </a>
                             </div>
                             <div id="collapseTwo" class="accordion-body collapse">
                                 <div class="accordion-inner">
-                                    A question which is commonly asked by users.
+                                    Singkolar draws inspiration from crowdfunding projects such as gittip and kickstarter.
+                                    <br>
+                                    We believe that the generosity that exudes in these projects can help solve 
+                                    our prevailing problems in our education system.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse"
+                                    data-parent="#accordion2" href="#collapseThree">
+                                    What do you need to get this off the ground?
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    At the moment all I need is you support and interest with the project 
+                                    to help me determine actual interest for such a solution.
                                 </div>
                             </div>
                         </div>
